--- a/package.json
+++ b/package.json
@@ -15,9 +15,12 @@
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
-    "dotenv": "^8.0.0",
-    "express": "^4.17.1",
-    "helmet": "^3.18.0",
-    "morgan": "^1.9.1"
+    "dotenv": "^6.2.0",
+    "express": "^4.16.4",
+    "helmet": "^3.15.0",
+    "morgan": "^1.9.1",
+    "uuid": "^3.3.2",
+    "valid-url": "^1.0.9",
+    "winston": "^3.2.1"
   }
 }
