--- a/package.json
+++ b/package.json
@@ -22,5 +22,11 @@
     "uuid": "^3.3.2",
     "valid-url": "^1.0.9",
     "winston": "^3.2.1"
+  },
+    "devDependencies": {
+    "chai": "^4.2.0",
+    "mocha": "^5.2.0",
+    "nodemon": "^1.18.9",
+    "supertest": "^3.3.0"
   }
 }
