--- a/package.json
+++ b/package.json
@@ -1,19 +1,19 @@
 {
   "name": "bookmarks-server",
-  "version": "1.0.0",
+  "version": "0.0.1",
   "description": "",
-  "main": "index.js",
+  "main": "src/server.js",
   "scripts": {
     "test": "mocha --require test/setup.js",
     "dev": "nodemon src/server.js",
-    //"migrate": "postgrator --config postgrator-config.js",
+    "migrate": "postgrator --config postgrator-config.js",
     "start": "node src/server.js",
     "predeploy": "npm audit",
     "deploy": "git push heroku master"
   },
   "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "author": "Thomas `tomatao` Hudspith-Tatham <iammotivated@gmail.com>",
+  "license": "MIT",
   "dependencies": {
     "cors": "^2.8.5",
     "dotenv": "^6.2.0",
@@ -22,10 +22,10 @@
     "knex": "^0.16.3",
     "morgan": "^1.9.1",
     "pg": "^7.8.0",
-    //"postgrator-cli": "^3.1.0",
-    "uuid": "^3.3.2",
+    "postgrator-cli": "^3.1.0",
     "valid-url": "^1.0.9",
-    "winston": "^3.2.1"
+    "winston": "^3.2.1",
+    "xss": "^1.0.3"
   },
   "devDependencies": {
     "chai": "^4.2.0",
